add navbar html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
   </head>
 
   <body>
-    <!-- YOUR CODE GOES HERE -->
+    <!-- navbar -->
+    <nav class="navbar">
+      <div class="divider"></div>
+      <div class="nav-header">
+        <h1 class="nav-logo">Web Agency</h1>
+        <ul class="header-linkd">
+          <li>
+            <a href="#home" class="header-link">home</a>
+          </li>
+          <li>
+            <a href="#skills" class="header-link">skills</a>
+          </li>
+          <li>
+            <a href="#services" class="header-link">services</a>
+          </li>
+          <li>
+            <a href="#projects" class="header-link">projects</a>
+          </li>
+          <li>
+            <a href="#contact" class="header-link">contact</a>
+          </li>
+          <li>
+            <a href="#posts" class="header-link">posts</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </body>
 </html>
