--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
       <div class="divider"></div>
       <div class="nav-header">
         <h2 class="nav-logo">Web Agency</h2>
-        <ul class="header-linkd">
+        <ul class="nav-links">
           <li>
-            <a href="#home" class="header-link">home</a>
+            <a href="#home" class="nav-link">home</a>
           </li>
           <li>
-            <a href="#skills" class="header-link">skills</a>
+            <a href="#skills" class="nav-link">skills</a>
           </li>
           <li>
-            <a href="#services" class="header-link">services</a>
+            <a href="#services" class="nav-link">services</a>
           </li>
           <li>
-            <a href="#projects" class="header-link">projects</a>
+            <a href="#projects" class="nav-link">projects</a>
           </li>
           <li>
-            <a href="#contact" class="header-link">contact</a>
+            <a href="#contact" class="nav-link">contact</a>
           </li>
           <li>
-            <a href="#posts" class="header-link">posts</a>
+            <a href="#posts" class="nav-link">posts</a>
           </li>
         </ul>
       </div>
