--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Theme</title>
+    <title>Web Agency</title>
     <link
       rel="stylesheet"
       href="./fontawesome-free-5.15.4-web/css/all.min.css"
