add nav-btn to nav-logo html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <nav class="navbar">
       <div class="divider"></div>
       <div class="nav-header">
-        <h2 class="nav-logo">Web Agency</h2>
+        <div class="nav-logo">
+          <h2>web agency</h2>
+          <span class="nav-btn">
+            <i class="fas fa-bars"></i>
+          </span>
+        </div>
         <ul class="nav-links">
           <li>
             <a href="#home" class="nav-link">home</a>
