add close btn to nav-btn html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
       <div class="nav-header">
         <div class="nav-logo">
           <h2>web agency</h2>
-          <span class="nav-btn">
-            <i class="fas fa-bars"></i>
-          </span>
+          <div class="nav-btn-container">
+            <span class="nav-btn">
+              <i class="fas fa-bars"></i>
+              <i class="fas fa-arrow-down"></i>
+            </span>
+            <span class="nav-btn">
+              <i class="fas fa-times"></i>
+              <i class="fas fa-arrow-up"></i>
+            </span>
+          </div>
         </div>
         <ul class="nav-links">
           <li>
@@ -44,5 +51,7 @@
         </ul>
       </div>
     </nav>
+    <!-- script -->
+    <script src="./js/app.js"></script>
   </body>
 </html>
