--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
         </ul>
       </div>
     </nav>
+    <!-- hero banner -->
+    <section class="hero" id="home">
+      <div class="hero-center">
+        <h1 class="hero-title">web agency</h1>
+        <div class="hero-btn-container">
+          <a href="#services" class="btn hero-btn">buy now</a>
+          <a href="about.html" class="btn hero-btn">about us</a>
+        </div>
+      </div>
+    </section>
     <!-- script -->
     <script src="./js/app.js"></script>
   </body>
