add skills html

--- a/index.html
+++ b/index.html
@@ -61,6 +61,59 @@
         </div>
       </div>
     </section>
+    <!-- skills -->
+    <section class="section skills" id="skills">
+      <div class="section-center skills-center">
+        <!-- single skill -->
+        <article class="skill">
+          <span class="skill-icon">
+            <i class="fa fa-code"></i>
+          </span>
+          <h2 class="skill-title">code</h2>
+          <p class="skill-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem ipsum
+            eum iure itaque aliquid.
+          </p>
+        </article>
+        <!-- end of single skill -->
+        <!-- single skill -->
+        <article class="skill">
+          <span class="skill-icon">
+            <i class="fas fa-file-alt"></i>
+          </span>
+          <h2 class="skill-title">document</h2>
+          <p class="skill-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+            soluta ducimus magni! Molestias, quam?
+          </p>
+        </article>
+        <!-- end of single skill -->
+        <!-- single skill -->
+        <article class="skill">
+          <span class="skill-icon">
+            <i class="fas fa-map"></i>
+          </span>
+          <h2 class="skill-title">optimized</h2>
+          <p class="skill-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+            deleniti labore aspernatur obcaecati architecto.
+          </p>
+        </article>
+        <!-- end of single skill -->
+        <!-- single skill -->
+        <article class="skill">
+          <span class="skill-icon">
+            <i class="fas fa-desktop"></i>
+          </span>
+          <h2 class="skill-title">retina</h2>
+          <p class="skill-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum
+            ducimus doloremque nisi obcaecati consectetur?
+          </p>
+        </article>
+        <!-- end of single skill -->
+      </div>
+    </section>
     <!-- script -->
     <script src="./js/app.js"></script>
   </body>
