--- a/index.html
+++ b/index.html
@@ -114,6 +114,90 @@
         <!-- end of single skill -->
       </div>
     </section>
+    <!-- services -->
+    <section class="section services" id="services">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>services</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center services-center">
+        <!-- single service -->
+        <article class="service">
+          <div class="service-front">
+            <span class="service-front-icon">
+              <i class="fas fa-cogs"></i>
+            </span>
+            <h4 class="service-front-title">web development</h4>
+          </div>
+          <div class="service-back">
+            <h4 class="service-back-title">web development</h4>
+            <p class="service-back-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+              velit fuga laudantium illo perspiciatis?
+            </p>
+            <a href="#" class="btn service-back-btn">read more</a>
+          </div>
+        </article>
+        <!-- end of single service -->
+        <!-- single service -->
+        <article class="service">
+          <div class="service-front">
+            <span class="service-front-icon">
+              <i class="fas fa-edit"></i>
+            </span>
+            <h4 class="service-front-title">design and branding</h4>
+          </div>
+          <div class="service-back">
+            <h4 class="service-back-title">design and branding</h4>
+            <p class="service-back-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+              quaerat tenetur alias culpa ut.
+            </p>
+            <a href="#" class="btn service-back-btn">read more</a>
+          </div>
+        </article>
+        <!-- end of single service -->
+        <!-- single service -->
+        <article class="service">
+          <div class="service-front">
+            <span class="service-front-icon">
+              <i class="fas fa-chart-line"></i>
+            </span>
+            <h4 class="service-front-title">seo</h4>
+          </div>
+          <div class="service-back">
+            <h4 class="service-back-title">seo</h4>
+            <p class="service-back-text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut
+              ratione atque cumque assumenda perferendis.
+            </p>
+            <a href="#" class="btn service-back-btn">read more</a>
+          </div>
+        </article>
+        <!-- end of single service -->
+        <!-- single service -->
+        <article class="service">
+          <div class="service-front">
+            <span class="service-front-icon">
+              <i class="fas fa-chart-pie"></i>
+            </span>
+            <h4 class="service-front-title">analytics</h4>
+          </div>
+          <div class="service-back">
+            <h4 class="service-back-title">analytics</h4>
+            <p class="service-back-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
+              eveniet quis accusantium velit dignissimos!
+            </p>
+            <a href="#" class="btn service-back-btn">read more</a>
+          </div>
+        </article>
+        <!-- end of single service -->
+      </div>
+    </section>
+    <!-- end of services -->
     <!-- script -->
     <script src="./js/app.js"></script>
   </body>
