add projects html

--- a/index.html
+++ b/index.html
@@ -198,6 +198,85 @@
       </div>
     </section>
     <!-- end of services -->
+    <!-- projects -->
+    <section class="section projects" id="projects">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>projects</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center projects-center">
+        <!-- single project -->
+        <article class="project">
+          <img
+            src="./images/current-projects-1.jpg"
+            alt="project"
+            class="project-img"
+          />
+          <div class="project-info">
+            <h3 class="project-info-title">project flex</h3>
+            <p class="project-info-text">design,web development</p>
+          </div>
+          <div class="project-footer">
+            <div class="project-comment">
+              <span class="comment-value">0</span>
+              <span class="project-footer-icon">
+                <i class="fas fa-comment"></i>
+              </span>
+            </div>
+            <p class="project-date">December 12, 2021</p>
+          </div>
+        </article>
+        <!-- end of single project -->
+        <!-- single project -->
+        <article class="project">
+          <img
+            src="./images/current-projects-2.jpg"
+            alt="project"
+            class="project-img"
+          />
+          <div class="project-info">
+            <h3 class="project-info-title">project grid</h3>
+            <p class="project-info-text">design,web development</p>
+          </div>
+          <div class="project-footer">
+            <div class="project-comment">
+              <span class="comment-value">0</span>
+              <span class="project-footer-icon">
+                <i class="fas fa-comment"></i>
+              </span>
+            </div>
+
+            <p class="project-date">january 12, 2022</p>
+          </div>
+        </article>
+        <!-- end of single project -->
+        <!-- single project -->
+        <article class="project">
+          <img
+            src="./images/current-projects-3.jpg"
+            alt="project"
+            class="project-img"
+          />
+          <div class="project-info">
+            <h3 class="project-info-title">project javascript</h3>
+            <p class="project-info-text">design,web development</p>
+          </div>
+          <div class="project-footer">
+            <div class="project-comment">
+              <span class="comment-value">0</span>
+              <span class="project-footer-icon">
+                <i class="fas fa-comment"></i>
+              </span>
+            </div>
+            <p class="project-date">october 12, 2021</p>
+          </div>
+        </article>
+        <!-- end of single project -->
+      </div>
+    </section>
+    <!-- end of projects -->
     <!-- script -->
     <script src="./js/app.js"></script>
   </body>
