--- a/index.html
+++ b/index.html
@@ -277,6 +277,14 @@
       </div>
     </section>
     <!-- end of projects -->
+    <!-- contact -->
+    <section class="section contact">
+      <div class="section-center contact-center">
+        <h2 class="contact-title">we are proffesionals</h2>
+        <a href="./contact.html" class="btn btn-contact">contact us</a>
+      </div>
+    </section>
+    <!-- end of contact -->
     <!-- script -->
     <script src="./js/app.js"></script>
   </body>
