add footer in index html

--- a/index.html
+++ b/index.html
@@ -426,6 +426,75 @@
       </div>
     </section>
     <!-- end of post -->
+    <!-- footer -->
+    <section class="footer">
+      <div class="section-center footer-center">
+        <div class="footer-info">
+          <ul class="footer-links">
+            <li>
+              <a href="faq.html" class="footer-link" target="_blank">FAQ</a>
+            </li>
+            <li>
+              <a href="about.html" class="footer-link" target="_blank"
+                >about us</a
+              >
+            </li>
+          </ul>
+          <!-- social icons -->
+          <ul class="social-icons">
+            <li>
+              <a
+                href="https://www.facebook.com"
+                class="social-icon"
+                target="_blank"
+              >
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.twitter.com"
+                class="social-icon"
+                target="_blank"
+              >
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com"
+                class="social-icon"
+                target="_blank"
+              >
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.telegram.me"
+                class="social-icon"
+                target="_blank"
+              >
+                <i class="fab fa-telegram"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com"
+                class="social-icon"
+                target="_blank"
+              >
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </li>
+          </ul>
+          <!-- end of social icons -->
+        </div>
+      </div>
+      <p class="footer-text">
+        &copy;<span id="date"></span> web agency. all rights reserved
+      </p>
+    </section>
     <!-- script -->
     <script src="./js/app.js"></script>
   </body>
