change navbar,remove nav-btn,change nav-links in recovery.html

--- a/recovery.html
+++ b/recovery.html
@@ -18,44 +18,17 @@
       <div class="nav-header">
         <div class="nav-logo">
           <h2>web agency</h2>
-
           <div class="nav-btn-container">
-            <span class="nav-btn">
-              <i class="fas fa-bars"></i>
-              <i class="fas fa-arrow-down"></i>
-            </span>
-            <span class="nav-btn">
-              <i class="fas fa-times"></i>
-              <i class="fas fa-arrow-up"></i>
-            </span>
+            <a href="./index.html" class="nav-home">
+              <i class="fas fa-home"></i>
+            </a>
           </div>
         </div>
         <ul class="nav-links">
           <li>
-            <a href="#home" class="nav-link">home</a>
-          </li>
-          <li>
-            <a href="#skills" class="nav-link">skills</a>
-          </li>
-          <li>
-            <a href="#services" class="nav-link">services</a>
-          </li>
-          <li>
-            <a href="#projects" class="nav-link">projects</a>
-          </li>
-          <li>
-            <a href="#contact" class="nav-link">contact</a>
-          </li>
-          <li>
-            <a href="#posts" class="nav-link">posts</a>
-          </li>
-          <li>
-            <button class="login-btn nav-link">
-              login
-              <span>
-                <i class="fa fa-key"></i>
-              </span>
-            </button>
+            <a href="./index.html" class="nav-home nav-link">
+              <i class="fas fa-home"></i>
+            </a>
           </li>
         </ul>
       </div>
@@ -64,13 +37,11 @@
       <div class="section-center hero-center">
         <!-- login form -->
         <div class="section-center recovery-form-center">
+          <a href="./index.html" class="recovery-home">
+            <i class="fas fa-arrow-left"></i>
+          </a>
           <form class="login-recovery">
             <h3>recover your password</h3>
-            <button class="btn-back" type="button">
-              <span>
-                <i class="fas fa-arrow-left"></i>
-              </span>
-            </button>
             <div class="form-control">
               <input
                 type="email"
