add id to body in html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./Styles/style.css" />
   </head>
 
-  <body>
+  <body id="home">
     <!-- login form -->
     <div class="section-center form-center show-form">
       <form class="form-side login">
