--- a/recovery.html
+++ b/recovery.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./Styles/style.css" />
   </head>
 
-  <body>
+  <body id="recovery">
     <!-- navbar -->
     <nav class="navbar">
       <div class="divider"></div>
