add id to contact section in index.html

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
     </section>
     <!-- end of projects -->
     <!-- contact -->
-    <section class="section contact">
+    <section class="section contact" id="contact">
       <div class="section-center contact-center">
         <h2 class="contact-title">we are proffesionals</h2>
         <a href="./contact.html" class="btn btn-contact">contact us</a>
