--- a/faq.html
+++ b/faq.html
@@ -44,7 +44,7 @@
             </h4>
             <div class="question-btns">
               <button type="button" class="question-btn btn-show">show</button>
-              <button type="button" class="question btn-hide">hide</button>
+              <button type="button" class="question-btn btn-hide">hide</button>
             </div>
           </div>
           <div class="question-text">
@@ -64,7 +64,7 @@
             </h4>
             <div class="question-btns">
               <button type="button" class="question-btn btn-show">show</button>
-              <button type="button" class="question btn-hide">hide</button>
+              <button type="button" class="question-btn btn-hide">hide</button>
             </div>
           </div>
           <div class="question-text">
@@ -84,7 +84,7 @@
             </h4>
             <div class="question-btns">
               <button type="button" class="question-btn btn-show">show</button>
-              <button type="button" class="question btn-hide">hide</button>
+              <button type="button" class="question-btn btn-hide">hide</button>
             </div>
           </div>
           <div class="question-text">
